Change the style to fix alignment bugs.
Buttons now have a fixed width; the footer is now better aligned.

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body {
   height: 100%;
   margin: 0;
   width: 100%;
+  min-width: 1060px;
 }
 h1,
 h2,
@@ -100,6 +101,9 @@ h4 {
   content: '$';
   padding-right: 0.25em;
 }
+#l-header .button {
+  width: 250px;
+}
 #l-header-buttons {
   font-size: 0;
   margin-top: 80px;
@@ -121,19 +125,29 @@ h4 {
 #l-main > figure {
   margin: auto;
   padding: 80px 0;
-  width: 772px;
+  width: 1060px;
 }
-#l-main > figure > video,
-#l-main > figure > video img {
-  display: block;
+#l-main > figure > .video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+#l-main > figure > .video-container > iframe,
+#l-main > figure > .video-container > object,
+#l-main > figure > .video-container > embed {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
 }
 #l-footer {
   background-color: #666665;
   color: #ffffff;
   height: 95px;
   line-height: 95px;
-  font-size: 0;
 }
 #l-footer::-moz-selection,
 #l-footer ::-moz-selection {
@@ -145,23 +159,23 @@ h4 {
   background: #ffffff;
   color: #666665;
 }
-#l-footer > * {
-  display: inline-block;
-  vertical-align: top;
-  width: 50%;
+#l-footer > .l-wrapper {
+  width: 1060px;
 }
-#l-footer > h3 {
+#l-footer > .l-wrapper > h3 {
+  float: left;
   font-size: 25px;
   margin: 25px 0 0 0;
   padding: 0;
 }
-#l-footer > p {
+#l-footer > .l-wrapper > p {
+  float: right;
   font-size: 20px;
   margin: 0;
   text-align: center;
 }
 .l-wrapper {
-  width: 772px;
+  width: 1060px;
   margin: auto;
 }
 #forkme {
@@ -187,7 +201,6 @@ h4 {
   height: 54px;
   width: 200px;
 }
-button,
 .button {
   box-sizing: border-box;
   display: inline-block;
@@ -220,33 +233,26 @@ button,
   background: #4c4c4c;
   border-color: #101213;
 }
-button.button-primary,
 .button.button-primary {
   color: #ffffff;
   background: #00568f;
   border-color: #00426e;
 }
-button:first-child,
 .button:first-child {
   margin: 0;
 }
-button:hover,
 .button:hover,
-button:focus,
 .button:focus {
   padding-bottom: 4px;
   padding-top: 4px;
   border-bottom-width: 0;
 }
-button:hover:active,
 .button:hover:active,
-button:focus:active,
 .button:focus:active {
   border-top-width: 4px;
   padding-bottom: 4px;
   padding-top: 0;
 }
-button:after,
 .button:after {
   background-image: url('/img/chevron.svg');
   background-position: 0 50%;
