--- a/less/_buttons.less
+++ b/less/_buttons.less
@@ -1,5 +1,4 @@
 // buttons.
-button,
 .button {
   box-sizing: border-box;
   display: inline-block;
